clang/test/BSC/Negative/Trait/r3/trait_redefinition_with_struct/trait_redefinition_with_struct.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s


struct A {};    // expected-note {{previous use is here}}
trait A {}; // expected-error {{use of 'A' with tag type that does not match previous declaration}}

union B {}; // expected-note {{previous use is here}}

trait B {}; // expected-error {{use of 'B' with tag type that does not match previous declaration}}

enum C {D}; // expected-note {{previous use is here}}

trait C {}; // expected-error {{use of 'C' with tag type that does not match previous declaration}}